--- a/package.json
+++ b/package.json
@@ -7,7 +7,22 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
